public/stylesheets/partials/_form.scss
/* NOTE: This is the stylesheet for the form section ONLY. Progress bar styles are in style.css */


/* --------------------------------------------------------------------------------------

   FORM BACKGROUND STYLES

-------------------------------------------------------------------------------------- */

.form-container section {
    @include fill-parent();
    @include clearfix();
    @include pad(0px 0px 20px 0px);

    border:none;
    background-color: $blue-light;
    color: $blue-darker;



    .form-body {
        @include pad(0 36px default 36px);

        @include media($mobile) {
            @include pad(0 25px default 25px);
        }
    }

    .field-group { /* A group of information under one heading */
            @include span-columns(6);
            @include pad(15px 0px 20px 0px);
            width: 100%;

            @include media($mobile) {
                @include pad(10px 0px 13px 0px);
            }
    }
}

.field-pair {
  @include pad(0px 0px 0px 0px);
  margin-top: 8px;
  .sub-field {
    @include media($desktop) {
      display: inline-block;
      width: 50%;
    }

    @include media($mobile) {
        @include pad();
    }
  }

}


.form-container { /* Form container width */
    @include media($desktop) {
        max-width: 800px;
    }

    @include media($mobile) {
        @include pad();
    }

    margin: 10px auto;
}


/* --------------------------------------------------------------------------------------

   FORM TYPOGRAPHY AND FORM INPUTS

-------------------------------------------------------------------------------------- */

.form-container {

    .form-title { /* Large heading with blue background at the top of the form */
        background: $blue-darker;
        color: $white;
        font-size: 24px;
        font-weight: bold;
        height: 76px;
        line-height: 76px;
        margin-bottom: 10px;
        padding-left: 36px;

        @include media($mobile) {
            font-size: 20px;
            height: 65px;
            line-height: 65px;
            margin-bottom: 0;
            padding-left: 25px;
        }
    }

    .sub-title { /* Internal form heading, above the divider line */
        border-bottom: 1px solid $blue;
        font-size: 20px;
        line-height: 26px;
        margin-bottom: 0;
        padding-bottom: 6px;

        @include media($mobile) {
            font-size: 16px;
            line-height:20px;
        }
    }

    .sub-title span {
        @include media($mobile) {
            font-size: 16px;
            line-height:20px;
        }
    }

    .sub-description { /* Smaller description in italics, under the divider line */
        font-size: 14px;
        font-style: italic;
        line-height: 20px;
        padding-top: 6px;

        @include media($mobile) {
            font-size: 11px;
            line-height: 16px;
        }
    }

    .heading { /* .heading is the combination of .sub-title + .sub-description */
        @include span-columns(12);

        padding-top: 20px;
        padding-bottom: 10px;
    }


    span { /* Mobile size of body text */
        @include media($mobile) {
           font-size: 13px;
       }
    }


    a { /* Inline link styles */
        color: $blue-darker;
        font-weight: bold;
        text-decoration: underline;
    }


    a:hover{
        color: #4da8d4;
    }


    label {
        font-weight: normal;
        margin-bottom: 0;
        font-size: 16px;

        @include media($mobile) {
            font-size: 13px;
        }
    }

    fieldset {
    border: none;
    background: none;
    }

    fieldset label {
        font-size: 14px;
    }

    fieldset legend {
        padding: 0;
    }


    input {
        border-color: $blue;
        border-radius: 0;
    }

    aside {
      font-size: 13px;
      font-style: italic;
      margin-top: 3px;
      margin-bottom: 3px;
    }

    .other-field {
      display: inline-block;
      margin-left: 10px;
    }
}


h3 {
  margin: 0;
}

input[type="radio"] {
    margin-top: 15px;
}

select {
    width: 100%;
    border-radius: 0 !important;
    background-color: white;
    height: 2.6em;
    border-color: #4DA8D3;
    font-size: 14px;
    box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
    transition: border-color 150ms ease;

    @include media($mobile) {
        font-size:13px;
    }
}

#labSelection {
  max-width: 250px;
}

#participantBirthYear {
  max-width: 80px;
}

input[type="email"] {
  max-width: 250px;
}

input[type="tel"] {
  max-width: 250px;
}

input[type="text"].other-field {
  max-width: 200px;
}

textarea {
  height: 100px;
}

select::-ms-expand { /* for IE 11 */
    display: none;
}
/* ... */

